# visionbrain

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/visionbrain/: __init__.py  __main__.py  agent_loop.py  agent_tools.py  cli.py  fp_inference.py  gemma_inference.py  loader.py  remote_gemma_inference.py  sam3_inference.py  viz.py  web_app.py
src/visionbrain/references/: system_prompt.txt
src/visionbrain/static/: index.html
tests/: test_visionbrain.py
